:zap: Detail users endpoint(validate, openapi, schemas, security)
