# src/routes/users.ts
@@ -1,10 +1,12 @@
 import { Router } from "express";
 import { userController } from "../controllers/users";
+import { userCreateValidate } from "../validations/user.validation";
+import { catchValidationResult } from "../utils/valitors";
 
 const router = Router();
 
 router.get("/", userController.getAll);
-router.post("/", userController.create);
+router.post("/", userCreateValidate, [catchValidationResult, userController.create]);
 router.get("/:userId", userController.getOne);
 router.patch("/:userId", userController.update);
 router.delete("/:userId", userController.delete);
