# src/types/schemas/user.response.ts
@@ -1,3 +1,10 @@
 export interface UserCreateResponse {
-  create: boolean;
+  id: string;
+  username: string;
+  email: string;
+  password: string;
+  isAdmin: boolean;
 }
+
+export type UserCreateRequest = Omit<UserCreateResponse, "id" | "isAdmin">;
+export type UserCreateAccessToken = { accessToken: string };
